# lpc177x_8x-hal

./: Cargo.toml  README.md  memory.x
.cargo/: config
src/: adc.rs  lib.rs  syscon.rs  time.rs  timer.rs
src/gpio/: mod.rs  regset.rs
src/serial/: mod.rs  pkg_208pin.rs
