[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
keywords = ["no-std", "arm", "cortex-m", "lpc17xx", "lpc177x_8x"]
license = "MIT OR Apache-2.0"
name = "lpc177x_8x-hal"
readme = "README.md"
repository = "https://github.com/thenewwazoo/lpc177x_8x-hal"
version = "0.1.0"

[features]
default = ["LQFP208", "rt"]
rt = ["lpc177x_8x/rt"]
LQFP208 = []
# Different packages have differing numbers of GPIOs; right now, only the 208-pin packages
# are supported.
#TFBGA208 = []
#TFBGA180 = []
#LQFP144 = []

[dependencies]
nb = "0.1.1"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.lpc177x_8x]
path = "/Users/bmatt/Development/rust/lpc_things/lpc177x_8x"
version = "0.13.3"
